dnl Process this file with autoconf to produce a configure script.
     
AC_PREREQ(2.57)
AC_INIT(libehca, 1.2.2, ehcadd@sourceforge.net)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libehca, 1.2.2)
AC_PROG_LIBTOOL

AC_ARG_ENABLE(libcheck, [  --disable-libcheck      do not test for presence of ib libraries],
[       if test x$enableval = xno ; then
                disable_libcheck=yes
        fi
])

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for libraries.

if test "$disable_libcheck" != "yes"
then
AC_CHECK_LIB(ibverbs, 
             ibv_get_device_list, 
             [], 
             AC_MSG_ERROR([libibverbs not installed]))

dnl Checks for header files.
AC_CHECK_HEADER(infiniband/driver.h, [],
    AC_MSG_ERROR([<infiniband/driver.h> not found.  libehca requires libibverbs.]))
fi

dnl Checks for library functions
AC_CHECK_FUNCS(ibv_read_sysfs_file ibv_register_driver)

dnl Now check if for libibverbs 1.0 vs 1.1
dummy=if$$
cat <<IBV_VERSION > $dummy.c
#include <infiniband/driver.h>
IBV_DEVICE_LIBRARY_EXTENSION
IBV_VERSION
IBV_DEVICE_LIBRARY_EXTENSION=`$CC $CPPFLAGS -E $dummy.c 2> /dev/null | tail -1`
rm -f $dummy.c
AM_CONDITIONAL(HAVE_IBV_DEVICE_LIBRARY_EXTENSION,
    test $IBV_DEVICE_LIBRARY_EXTENSION != IBV_DEVICE_LIBRARY_EXTENSION)
AC_SUBST(IBV_DEVICE_LIBRARY_EXTENSION)

dnl Checks for programs.
AC_PROG_CC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

if test "$disable_libcheck" == "yes"
then
echo "#define HAVE_IBV_READ_SYSFS_FILE 1" >> config.h
fi
